feat: setup full-stack auth with firebase and mongodb
- Integrated Firebase Modular SDK for password reset.
- Added Express backend with MongoDB to verify user existence before reset.
- Implemented Mongoose UserSchema with role-based fields.
- Fixed export errors in firebase.js service.
- Cleaned up project structure and added .gitignore.

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=8000
 MONGO_URL=connectionstring
 JWT_SECRET=supersecretkey
+MONGO_URI=mongodb+srv://eduhub_admin:eduhubdatabase26@eduhub-cluster.8pse1w4.mongodb.net/eduhub_db?appName=EduHub-Cluster
