--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=8000
-MONGO_URL=mongodb://localhost:27017/
+MONGO_URL=mongodb://localhost:27017/eduhubDB
 JWT_SECRET=supersecretkey
 MONGO_URI=mongodb+srv://eduhub_admin:eduhubdatabase26@eduhub-cluster.8pse1w4.mongodb.net/eduhub_db?appName=EduHub-Cluster
